# docker-zoomcamp2026

./: .gitignore  ingest_data.py  main.py  pyproject.toml
01-docker-terraform/homework-1/: Dockerfile  README.md  ingest_homework.py  pyproject.toml
01-docker-terraform/terraform-gcp/: main.tf
02-workflow-orchestration/: docker-compose.yml
02-workflow-orchestration/flows/: 07_gcp_setup.yaml
02-workflow-orchestration/homework-2/queries/: homework_q3_q4_q5.sql
pipeline/: Dockerfile  notebook.ipynb  pipeline.py  pyproject.toml
